--- a/style.css
+++ b/style.css
@@ -7,28 +7,30 @@
 	padding: 0;
 	text-decoration: none;
 }
-
 body {
-	background: #ffffff;
+	background: #dfdede;
 	font-family: 'Source Sans Pro', sans-serif;
+	height: 100%;
 }
 
+img {
+	font-size: 0;
+}
 nav {
+	background: #ffffff;
 	display: flex;
 	justify-content: space-between;
 	padding: 1.5rem 3.5rem;
 }
-nav img {
-	font-size: 0;
-}
-nav .logo_container,
-nav ul {
+nav .logo_container {
 	align-items: center;
 	display: flex;
 	gap: 0.25rem;
 }
 nav ul {
+	display: flex;
 	gap: 2.5rem;
+	align-items: center;
 }
 nav ul li a {
 	color: #090909;
@@ -37,4 +39,144 @@ nav ul li a {
 nav p {
 	color: #0e0e0e;
 	font: 700 1.25rem 'Roboto', sans-serif;
+}
+
+.wrapper {
+	margin: 0 auto;
+	max-width: 100%;
+	width: 1085px;
+}
+/* MAIN */
+main {
+	background: #fafafa;
+}
+main .main_article {
+	background-color: #050601;
+	background-image: url('images/hero_img.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: white;
+	padding: 18rem 3.5rem 4.5rem;
+}
+.main_article .article_text_wrapper {
+	max-width: 700px;
+}
+.article_text_wrapper p.article_text {
+	font: 400 1rem 'Source Sans Pro', sans-serif;
+}
+.article_text_wrapper a {
+	color: white;
+	cursor: pointer;
+	font: 700 2.5rem 'Source Sans Pro', sans-serif;
+}
+.article_text_wrapper a:hover {
+	text-decoration: underline;
+}
+
+main .articles_section {
+	padding: 3rem;
+}
+.articles_section .other_articles_wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+	justify-content: space-around;
+}
+.other_articles_wrapper .article {
+	width: 300px;
+}
+.article img {
+	margin-bottom: 0.875rem;
+	width: 100%;
+}
+.article p:first-of-type {
+	font: 400 0.875rem 'Source Sans Pro', sans-serif;
+	color: #000000;
+	margin-bottom: 0.875rem;
+}
+.article p:nth-of-type(2) {
+	color: #141414;
+	font: 700 1.5rem 'Source Sans Pro', sans-serif;
+	margin-bottom: 0.5rem;
+}
+.article p:last-of-type {
+	font: 400 1rem 'Source Sans Pro', sans-serif;
+	color: #505050;
+	margin-bottom: 1.875rem;
+}
+.articles_section > p {
+	font: 700 0.875rem 'Source Sans Pro', sans-serif;
+	text-align: center;
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+/* FOOTER */
+footer {
+	background: #202020;
+	padding: 2.25rem;
+}
+footer p:first-of-type {
+	color: #ececec;
+	font: 700 0.75rem 'Source Sans Pro', sans-serif;
+	letter-spacing: -3%;
+	padding-bottom: 2px;
+	text-align: center;
+}
+footer p:last-of-type {
+	color: #d7d7d7;
+	font: 400 0.75rem 'Source Sans Pro', sans-serif;
+	letter-spacing: -3%;
+	text-align: center;
+}
+
+@media screen and (max-width: 800px) {
+	main .main_article {
+		padding: 10rem 2.5rem 3rem;
+	}
+}
+@media screen and (max-width: 750px) {
+	.other_articles_wrapper .article {
+		width: 370px;
+	}
+	.article img {
+		margin-bottom: 0.875rem;
+		height: 232px;
+		object-fit: cover;
+	}
+}
+@media screen and (max-width: 600px) {
+	nav {
+		padding: 1rem 1.25rem;
+	}
+	nav ul {
+		align-items: initial;
+		gap: 1.75rem;
+	}
+	nav img {
+		width: 1.5rem;
+		aspect-ratio: 1/1;
+	}
+	nav ul li a {
+		font-size: 0.75rem;
+	}
+	nav p {
+		font-size: 0.875rem;
+	}
+	main .articles_section {
+		padding: 2rem 1.25rem;
+	}
+	main .main_article {
+		padding: 5rem 1.5rem 2rem;
+	}
+	.article p:first-of-type {
+		margin-bottom: 0.5rem;
+	}
+	.article_text_wrapper p.article_text:first-of-type {
+		font: 400 0.75rem 'Source Sans Pro', sans-serif;
+	}
+	.article_text_wrapper a {
+		font: 700 2rem 'Source Sans Pro', sans-serif;
+	}
 }
